@@ -75,6 +75,8 @@ public class CircuitComponent extends JComponent implements Circuit.ChangedListe
         ATTR_LIST.add(Keys.SHOW_DATA_TABLE);
         ATTR_LIST.add(Keys.SHOW_DATA_GRAPH);
         ATTR_LIST.add(Keys.SHOW_DATA_GRAPH_MICRO);
+        ATTR_LIST.add(Keys.PRELOAD_PROGRAM);
+        ATTR_LIST.add(Keys.PROGRAM_TO_PRELOAD);
     }
 
     private static final String DEL_ACTION = "myDelAction";
