@@ -6,6 +6,7 @@ HEAD, planned as v0.20
 - Added EEPROM with separate ports for reading and writing.
 - The external assembly IDE is able to preload also RAMs with executable code.
   The register representing the program counter must be marked as such.
+- Allows the pre-loading of program memory if a RAM is used as such.
 
 v0.19, released on 14. June 2018
 - Added a tabbed pane to the attributes dialog to make it more beginner friendly.
